--- a/src/App.css
+++ b/src/App.css
@@ -9,12 +9,14 @@
   align-items: center;
   justify-content: center;
   height: 100vh;
-  background-color: #eeeeee;
+  width: 100vw;
+  background-color: #03045E;
 }
 
 .card {
   padding: 25px;
   box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.17);
+  background: #90E0EF !important;
 }
 
 .z-in {
@@ -22,4 +24,19 @@
   position: fixed;
   filter: blur(5px);
 
+}
+
+.form-select,
+.form-control {
+  background-color: #CAF0F8 !important;
+}
+
+.btn {
+  background-color: #EC255A !important;
+}
+
+.bgimg {
+  height: 100vh;
+  width: 100vw;
+  
 }
